tests/compile_failures/events/default_list_not_supported.rs
use dioxus_sugar::events;

#[events(default(onclick, onkeypress))]
struct Props {}

fn main() {}